Changelog
=========


1.0.1 (unreleased)
------------------

- Convert newslisting into a html list for the sake of accessibility.
  [mathias.leimgruber]

1.0.0 (2015-12-04)
------------------

- Nothing changed yet