@@ -1,41 +1,61 @@
 @include portal-type-font-awesome-icon(ftw-news-news, newspaper-o);
+
 @include portal-type-font-awesome-icon(ftw-news-newsfolder, newspaper-o);
+
 @include portal-type-font-awesome-icon(ftw-news-newslistingblock, newspaper-o);
 
 .portletArchiveListing {
   .highlight a {
     font-weight: bold;
   }
+
   li.year {
     cursor: pointer;
   }
+
   li {
     display: block;
     margin-bottom: 2px;
   }
+
   ul.months {
     display: none;
     margin-bottom: 10px;
     margin-top: 5px;
   }
+
   li.month {
     padding-left: 2em;
   }
+
   li.year span.yearnumber:before {
     content: '►';
     padding-right: 5px;
   }
+
   li.year.expanded span.yearnumber:before {
     content: '▼';
   }
+
   ul.years ul.expanded {
     display: block;
   }
 }
 
 .newsListing {
-  div.image {
-    float: left;
-    margin-right: 1em;
+  @include ul(plain);
+
+  .image {
+    float: right;
+    margin-left: 1em;
+  }
+
+  .tileItem {
+    border-bottom: 1px solid $gray-light;
+    margin-bottom: 1em;
+
+    .tileHeadline {
+      font-size: $font-size-h3;
+    }
   }
 }
